--- a/treeALCKappaperd.tex
+++ b/treeALCKappaperd.tex
@@ -4,8 +4,8 @@ child {node [outcome] {
 DWman: 21\\
 DWeuc: 15\\
 SVMsim: 8\\
-% DWmah: 6\\
-% SVMbal: 3\\
+DWmah: 6\\
+SVMbal: 3\\
 % TUman: 2\\
 % \textbf{HTUmah}: 2\\
 % \textbf{ATUeuc}: 2\\
@@ -23,7 +23,7 @@ SVMsim: 8\\
 % \textbf{ATUmah}: 0\\
 % TUeuc: 0\\
 % \textbf{SGmulti}: 0\\
-demais: 21} edge from parent node [cond] {$\leq75.5$}}
+demais: 12} edge from parent node [cond] {$\leq75.5$}}
 child {node [outcome] {
 DWmah: 18\\
 DWman: 14\\
@@ -104,7 +104,7 @@ child {node [outcome] {
 EERent: 24\\
 DWeuc: 7\\
 DWman: 6\\
-% Rnd: 4\\
+Rnd: 4\\
 % SVMsim: 2\\
 % QBCRFw: 2\\
 % DWmah: 2\\
@@ -123,7 +123,7 @@ DWman: 6\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
 % \textbf{ATUeuc}: 0\\
-demais: 13} edge from parent node [cond] {$\leq18$}}
+demais: 9} edge from parent node [cond] {$\leq18$}}
 child {node [outcome] {
 DWeuc: 9\\
 QBCRFw: 8\\
@@ -269,6 +269,5 @@ DWeuc: 3\\
 % EERent: 0\\
 % \textbf{SGmulti}: 0\\
 % \textbf{HTUmah}: 0\\
-demais: 12} edge from parent node [cond] {$>25.9$}}edge from parent node [cond] {SVM}}edge from parent node [cond] {flexível}}
-%
+demais: 12} edge from parent node [cond] {$>25.9$}}edge from parent node [cond] {SVM}}edge from parent node [cond] {flex{\'i}vel}}
 ;
