--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -210,14 +210,11 @@ Com relação à minimização de risco financeiro,
 novamente as estratégias propostas também se mostraram viáveis,
 com HTUmah sendo a mais estável - vencendo TUmah com significância estatística.
 
-
-
-
 A principal dificuldade do cenário explorado nesta seção é, possivelmente, a existência de algumas
 combinações menos favoráveis entre as bases e os algoritmos selecionados.
 Algumas delas são perceptíveis na Figura \ref{treebadleas}.
 A árvore indica a contagem de derrotas de cada algoritmo de acordo com a medida kappa.
-Pequenas reservas de exemplos ($\#\leq142,4$),
+Pequenas reservas de exemplos ($\#exemplos \leq 142,4$),
 por exemplo, desfavorecem CIELM mais fortemente.
 % \afterpage{\clearpage\begin{landscape}
 \begin{figure}
@@ -246,162 +243,6 @@ level 5/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling
 \end{center}
 \end{figure}
 % \end{landscape}\clearpage}
-
-% % \afterpage{\clearpage\begin{landscape}
-\begin{figure}
-\tikzset{
-every node/.style={font=\scriptsize,black, thin},
-decision/.style={shape=rectangle, minimum height=1cm, text width=1.7cm,
-text centered, rounded corners=1ex, draw},
-outcome/.style={ shape=rectangle, fill=red!15, draw, text width=2cm, text justified},
-decision tree/.style={sibling distance=3cm, level distance=2cm},
-cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
-}
-\begin{center}
-\caption{Possíveis nichos de inadequação base-estratégia-algoritmo.
-\textit{Mínimo de dez exemplos por folha.}}
-\begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
-text width=2.7cm, align=flush center, grow cyclic,
-level 1/.style={level distance=3.2cm,sibling angle=180},
-level 2/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-level 3/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-level 4/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-level 5/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
-]
-\input{treeALCKappaperd}
-\label{treegoodleas}
-\end{tikzpicture}
-\end{center}
-\end{figure}
-% % \end{landscape}\clearpage}
-essa arvore acima justifica o cenario abaixo 
-\subsection{Cenário com definição de algoritmo após rotulação}\label{posdefinido}
-A estratégia específica QBC perdeu de todas, exceto GATUman e Rnd,
-conforme Tabela \ref{stratsALCKappaFriedRFwRedux}.
-GATUman também teve um desempenho significativamente negativo.
-Com o algoritmo RFw, as estratégias mais exploratórias ficaram em desvantagem,
-com TUman vencendo todas, exceto Mar, que é uma estratégia puramente
-prospectiva.
-SGmulti, Mar e EERent também tiveram algum destaque, em oposição ao ocorrido
-na comparação de estratégias com algoritmos variados.
-
-\begin{table}[h]
-\caption{Um contra um (RFw). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}
-\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|c}
-                        & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9\\
-1 - Rnd         & - &   &   &   &   &   &   &   &   \\
-2 - Clu         &   & - &   &   &   &   &   &   & * \\ \hline
-3 - \textbf{ATUmah}     & * &   & - & * &   &   &   &   & * \\
-4 - \textbf{HTUmah}    &   &   &   & - &   &   &   &   &   \\ \hline
-5 - \textbf{SGmulti}    & * & * &   & * & - &   &   &   & * \\
-6 - Mar         & * & * & * & * &   & - &   &   & * \\ \hline
-7 - TUmah       & * & * & * & * & * &   & - & * & * \\
-8 - EERent      & * & * &   & * &   &   &   & - & * \\ \hline
-9 - QBC         &   &   &   &   &   &   &   &   & - \\\end{tabular}
-\quad
-\begin{tabular}{lccc}
-algoritmo & \makecell{primeiros\\lugares} & \makecell{derrotas\\para Rnd}  & \makecell{últimos\\lugares} \\
-\hline
-TUmah      & \bom{50} & \bomd{13} & 2 \\
-Mar        & \bomd{19} & 14 & 2 \\
-ATUmah     & 9 & 18 & 5 \\
-SGmulti    & 8 & \bom{8} & \bom{0} \\
-EERent     & 3 & 14 & 2 \\
-Rnd        & 2 & - & 24 \\
-QBC        & 1 & \ruim{64} & \ruim{45} \\
-HTUmah     & 1 & 48 & 13 \\
-Clu        & \ruim{1} & 25 & \bomd{1} \\
-\end{tabular}
-}
-\label{stratsALCKappaFriedRFwRedux}
-\end{center}
-\end{table}
-
-\input{stratsfriedKappa}
-
-
-\subsection{Comparação SVM}\label{csvm}
-Diferentemente do que ocorreu com RFw, a SVM favoreceu GATUman.
-EERent apareceu como a melhor opção, vencendo praticamente todas.
-As estratégias específicas não tiveram tantas derrotas quanto a QBC na Seção \ref{crf}
-\begin{table}[h]
-\caption{Um contra um (SVM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}
-\scalebox{0.85}{\begin{tabular}{lcc|cc|cc|cc|cc}
-                        & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
-1 - Rnd         & - &   &   &   &   &   &   &   &   &   \\
-2 - Clu         &   & - &   &   &   &   &   &   &   &   \\ \hline
-3 - \textbf{ATUmah}     &   &   & - &   &   &   &   &   &   &   \\
-4 - \textbf{HTUmah}    & * &   & . & - & * & * &   &   & * & + \\ \hline
-5 - \textbf{SGmulti}    &   &   &   &   & - &   &   &   &   &   \\
-6 - Mar         &   &   &   &   &   & - &   &   &   &   \\ \hline
-7 - TUmah       & . &   &   &   &   &   & - &   &   &   \\
-8 - EERent      & * & * & * &   & * & * & * & - & * & * \\ \hline
-9 - SVMRBFbal   &   &   &   &   &   &   &   &   & - &   \\
-10 - SVMRBFsim  &   &   &   &   &   &   &   &   &   & - \\ \hline\end{tabular}
-\quad
-\begin{tabular}{lccc}
-algoritmo & \makecell{primeiros\\lugares} & \makecell{derrotas\\para Rnd}  & \makecell{últimos\\lugares} \\
-\hline
-EERent     & \bom{32} & \bom{19} & \bom{2} \\
-SVMsim     & \bomd{17} & 48 & \ruim{23} \\
-HTUmah     & 13 & \bomd{26} & 5 \\
-SVMbal     & 8 & \ruim{51} & 13 \\
-TUmah      & 7 & 36 & 5 \\
-Clu        & 7 & 34 & 7 \\
-Mar        & 4 & 44 & 18 \\
-ATUmah     & 4 & 35 & 6 \\
-SGmulti    & 2 & 42 & \bomd{4} \\
-Rnd        & \ruim{0} & - & 11 \\
-\end{tabular}
-}
-\label{stratsALCKappaFriedSVMRedux}
-\end{center}
-\end{table}
-
-
-% \subsection{Comparação ELM}\label{celm}
-% Similarmente ao ocorrido com a QBC, a estratégia específica da ELM (EMC)
-% perdeu de todas incluindo a amostragem aleatória.
-% Isso sugere que a proposta não é viável.
-% Porém, segundo a comparação de classificadores da Seção \ref{algs},
-% a ELM teve apenas quatro primeiros lugares dentre as $94$ bases de dados.
-% É possível que a seleção de modelos via PRESS tenha influenciado negativamente
-% as predições e consequentemente prejudicado a estimativa de mudança no modelo.
-% TUmah, EERent e Mar venceram as três estratégias agnósticas com diferentes
-% graus de significância estatística.
-% SGmulti superou apenas as estratégias Rnd e Clu.
-% \begin{table}[h]
-% \caption{Um contra um (ELM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-% \begin{center}\begin{tabular}{lcc|cc|cc|cc|c}
-%                         & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9\\
-% 1 - Rnd         & - &   &   &   &   &   &   &   & + \\
-% 2 - Clu         &   & - &   &   &   &   &   &   & + \\ \hline
-% 3 - \textbf{ATUmah}     &   &   & - &   &   &   &   &   & * \\
-% 4 - \textbf{GATUmah}    &   &   &   & - &   &   &   &   & * \\ \hline
-% 5 - \textbf{SGmulti}    & + & + &   &   & - &   &   &   & * \\
-% 6 - Mar         & * & * & . &   &   & - &   &   & * \\ \hline
-% 7 - TUmah       & * & * & + &   &   &   & - &   & * \\
-% 8 - EERent      & * & * & + &   &   &   &   & - & * \\ \hline
-% 9 - EMC         &   &   &   &   &   &   &   &   & - \\\end{tabular}
-% \quad
-% \begin{tabular}{lccc}
-% algoritmo & \makecell{primeiros\\lugares} & \makecell{derrotas\\para Rnd}  & \makecell{últimos\\lugares} \\
-% \hline
-% TUmah      & 28 & 36 & 3 \\
-% EERent     & 18 & 25 & 3 \\
-% Mar        & 15 & 29 & 6 \\
-% EMC        & 8 & 69 & 58 \\
-% SGmulti    & 7 & 24 & 2 \\
-% HTUmah     & 7 & 38 & 7 \\
-% ATUmah     & 5 & 37 & 7 \\
-% Clu        & 5 & 45 & 4 \\
-% Rnd        & 3 & 94 & 9 \\
-% \end{tabular}
-% \label{stratsALCKappaFriedELMRedux}
-% \end{center}
-% \end{table}
 
 \subsection{Síntese das comparações}\label{sintese}
 Estratégias agnósticas têm a vantagem de dispensar o aprendiz.
@@ -468,6 +309,41 @@ probabilidade de todos os exemplos da reserva ameniza o efeito do excesso de con
 % \end{itemize}
 
 \section{algoritmo definido após rotulação}\label{ind}
+Numa aplicação real, a disponibilidade de rótulos permite uma escolha mais adequada
+do algoritmo de aprendizado.
+Na Figura \ref{treegoodstrats}, embora a árvore contenha uma presença expressiva das
+piores estratégias em todos os nós, como as variantes DW*,
+algumas estratégias bem sucedidas no primeiro experimento aparecem com a maior frequência
+de derrotas em alguns nós, como é o caso de EERent no caminho
+(fronteira=flexível) $\rightarrow$ (algoritmo=CIELM) $\rightarrow$ ($\#atributos \leq 18$).
+% \afterpage{\clearpage\begin{landscape}
+\begin{figure}
+\tikzset{
+every node/.style={font=\scriptsize,black, thin},
+decision/.style={shape=rectangle, minimum height=1cm, text width=1.7cm,
+text centered, rounded corners=1ex, draw},
+outcome/.style={ shape=rectangle, fill=red!15, draw, text width=2cm, text justified},
+decision tree/.style={sibling distance=3cm, level distance=2cm},
+cond/.style={blue, yshift=-2mm, shape=rectangle, text centered},
+}
+\begin{center}
+\caption{Possíveis nichos de inadequação base-estratégia-algoritmo.
+\textit{Mínimo de dez exemplos por folha.}}
+\begin{tikzpicture} [edge from parent/.style={->,above,draw,sloped,midway,gray!30,ultra thick},
+text width=2.7cm, align=flush center, grow cyclic,
+level 1/.style={level distance=3.2cm,sibling angle=180},
+level 2/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+level 3/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+level 4/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+level 5/.style={text width=2cm, font=\footnotesize, level distance=3.2cm,sibling angle=60},
+]
+\input{treeALCKappaperd}
+\label{treegoodstrats}
+\end{tikzpicture}
+\end{center}
+\end{figure}
+% % \end{landscape}\clearpage}
+
 Algoritmos com boa performance em treinamento com poucos dados podem ter baixa
 performance com muitos dados \citep{journals/sigkdd/AttenbergP10,journals/jmlr/PerlichPS03}.
 Logo, mesmo que o usuário disponha de informações sobre o domínio da aplicação,
@@ -475,8 +351,6 @@ elas podem não se aplicar ao seu conjunto específico de exemplos cujo tamanho 
 orçamento.
 
 
-Numa aplicação real, a disponibilidade de rótulos permite uma escolha mais adequada
-do algoritmo de aprendizado.
 Assim, estratégias agnósticas e aquelas cujo aprendiz possa ser desvinculado da escolha do
 algoritmo de aprendizado definitivo da aplicação se mostram desejáveis.
 As estratégias agnósticas adiam naturalmente a escolha do algoritmo para depois da
