--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -383,8 +383,10 @@ A comparação dos pares estratégia-aprendiz se dá por três pontos de vista:
 curvas de ranqueamento; tabelas um contra um e contagem de colocações; e,
 árvore de nichos de adequação.
 
-As curvas de ranqueamento dos XXX melhores pares estratégia-aprendiz são exibidas
+As curvas de ranqueamento dos dez melhores pares estratégia-aprendiz são exibidas
 na Figura \ref{}
+\input plotPares
+
 \input{arvorePares}
 
 \section{Tempo de espera tolerável (fazer se der tempo depois de ter terminado meta)}
