--- a/treeParesKappa.tex
+++ b/treeParesKappa.tex
@@ -2,15 +2,15 @@
 child {node [decision] {\#classes}
 child {node [decision] {$\frac{\#exemplos}{\#atrib.}$}
 child {node [outcome] {
-% \textbf{HTUmah} RFw: 5\\
-% EERent SVM: 4\\
-% DWmah SVM: 2\\
-% TUman RFw: 2\\
-% EERent 5NN: 2\\
-% TUeuc RFw: 2\\
-% DWman RFw: 2\\
-% \textbf{HTUeuc} SVM: 2\\
-% TUmah CIELM: 2\\
+\textbf{HTUmah} RFw: 5\\
+EERent SVM: 4\\
+DWmah SVM: 2\\
+TUman RFw: 2\\
+EERent 5NN: 2\\
+TUeuc RFw: 2\\
+DWman RFw: 2\\
+\textbf{HTUeuc} SVM: 2\\
+TUmah CIELM: 2\\
 % DWman RFw: 2\\
 % \textbf{HTUeuc} SVM: 2\\
 % TUmah CIELM: 2\\
@@ -80,16 +80,16 @@ child {node [outcome] {
 % DWeuc SVM: 0\\
 % \textbf{ATUeuc}: 0\\
 % \textbf{HTUmah} NB: 0\\
-demais ($\leq List(5, 4, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)$): 24} edge from parent node [cond] {$\leq42.2$}}
+demais ($\leq 1$): 24} edge from parent node [cond] {$\leq42.2$}}
 child {node [outcome] {
-% EERent RFw: 5\\
-% DWeuc RFw: 4\\
-% TUman RFw: 4\\
-% \textbf{HTUeuc} RFw: 4\\
-% TUeuc RFw: 4\\
-% \textbf{HTUman} RFw: 4\\
-% DWman RFw: 4\\
-% Ent RFw: 4\\
+EERent RFw: 5\\
+DWeuc RFw: 4\\
+TUman RFw: 4\\
+\textbf{HTUeuc} RFw: 4\\
+TUeuc RFw: 4\\
+\textbf{HTUman} RFw: 4\\
+DWman RFw: 4\\
+Ent RFw: 4\\
 % Ent RFw: 4\\
 % DWmah RFw: 3\\
 % TUman SVM: 3\\
@@ -158,17 +158,17 @@ child {node [outcome] {
 % Mar NB: 0\\
 % EERacc NB: 0\\
 % TUman CIELM: 0\\
-demais ($\leq List(5, 4, 4, 4, 4, 4, 4, 4, 3, 3, 3, 3, 3, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)$): 51} edge from parent node [cond] {$>42.2$}}edge from parent node [cond] {$\leq4$}}
+demais ($\leq 3$): 51} edge from parent node [cond] {$>42.2$}}edge from parent node [cond] {$\leq4$}}
 child {node [decision] {$\frac{\#exemplos}{\#atrib.}$}
 child {node [outcome] {
-% \textbf{HTUman} C4.5w: 3\\
-% TUmah C4.5w: 2\\
-% TUman SVM: 2\\
-% TUeuc RFw: 2\\
-% \textbf{HTUman} NB: 2\\
-% \textbf{HTUmah} SVM: 2\\
-% TUman C4.5w: 2\\
-% TUman CIELM: 2\\
+\textbf{HTUman} C4.5w: 3\\
+TUmah C4.5w: 2\\
+TUman SVM: 2\\
+TUeuc RFw: 2\\
+\textbf{HTUman} NB: 2\\
+\textbf{HTUmah} SVM: 2\\
+TUman C4.5w: 2\\
+TUman CIELM: 2\\
 % TUman C4.5w: 2\\
 % TUman CIELM: 2\\
 % \textbf{HTUeuc} NB: 1\\
@@ -238,13 +238,13 @@ child {node [outcome] {
 % TUmah CIELM: 0\\
 % DWeuc SVM: 0\\
 % \textbf{ATUeuc}: 0\\
-demais ($\leq List(3, 2, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)$): 21} edge from parent node [cond] {$\leq50.3$}}
+demais ($\leq 1$): 21} edge from parent node [cond] {$\leq50.3$}}
 child {node [decision] {\%major.}
 child {node [outcome] {
-% \textbf{HTUeuc} RFw: 3\\
-% TUman RFw: 2\\
-% Mar RFw: 2\\
-% \textbf{HTUman} 5NN: 2\\
+\textbf{HTUeuc} RFw: 3\\
+TUman RFw: 2\\
+Mar RFw: 2\\
+\textbf{HTUman} 5NN: 2\\
 % EERent RFw: 1\\
 % EERacc RFw: 1\\
 % \textbf{HTUman} C4.5w: 1\\
@@ -316,12 +316,12 @@ child {node [outcome] {
 % Ent RFw: 0\\
 % DWeuc SVM: 0\\
 % \textbf{HTUmah} NB: 0\\
-demais ($\leq List(3, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)$): 14} edge from parent node [cond] {$\leq42.2$}}
+demais ($\leq 1$): 14} edge from parent node [cond] {$\leq42.2$}}
 child {node [outcome] {
-% SVMbal: 3\\
-% \textbf{ATUman}: 2\\
-% Mar CIELM: 2\\
-% \textbf{HTUman} CIELM: 2\\
+SVMbal: 3\\
+\textbf{ATUman}: 2\\
+Mar CIELM: 2\\
+\textbf{HTUman} CIELM: 2\\
 % \textbf{HTUman} CIELM: 2\\
 % EERent RFw: 1\\
 % EERacc RFw: 1\\
@@ -394,16 +394,16 @@ child {node [outcome] {
 % Ent RFw: 0\\
 % DWeuc SVM: 0\\
 % \textbf{ATUeuc}: 0\\
-demais ($\leq List(3, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)$): 11} edge from parent node [cond] {$>42.2$}}edge from parent node [cond] {$>50.3$}}edge from parent node [cond] {$>4$}}edge from parent node [cond] {$\leq0$}}
+demais ($\leq 1$): 11} edge from parent node [cond] {$>42.2$}}edge from parent node [cond] {$>50.3$}}edge from parent node [cond] {$>4$}}edge from parent node [cond] {$\leq0$}}
 child {node [decision] {\%nominais}
 child {node [outcome] {
-% TUeuc 5NN: 3\\
-% TUman 5NN: 2\\
-% EERent 5NN: 2\\
-% \textbf{HTUeuc} RFw: 2\\
-% \textbf{SGmulti} RFw: 2\\
-% TUmah NB: 2\\
-% TUmah RFw: 2\\
+TUeuc 5NN: 3\\
+TUman 5NN: 2\\
+EERent 5NN: 2\\
+\textbf{HTUeuc} RFw: 2\\
+\textbf{SGmulti} RFw: 2\\
+TUmah NB: 2\\
+TUmah RFw: 2\\
 % \textbf{SGmulti} RFw: 2\\
 % TUmah NB: 2\\
 % TUmah RFw: 2\\
@@ -475,10 +475,10 @@ child {node [outcome] {
 % Ent RFw: 0\\
 % \textbf{ATUeuc}: 0\\
 % \textbf{HTUmah} NB: 0\\
-demais ($\leq List(3, 2, 2, 2, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)$): 9} edge from parent node [cond] {$\leq42.9$}}
+demais ($\leq 1$): 9} edge from parent node [cond] {$\leq42.9$}}
 child {node [outcome] {
-% Mar RFw: 7\\
-% Ent RFw: 4\\
+Mar RFw: 7\\
+Ent RFw: 4\\
 % \textbf{HTUmah} RFw: 2\\
 % \textbf{HTUeuc} SVM: 2\\
 % SVMsim: 1\\
@@ -551,5 +551,5 @@ child {node [outcome] {
 % DWeuc SVM: 0\\
 % \textbf{ATUeuc}: 0\\
 % \textbf{HTUmah} NB: 0\\
-demais ($\leq List(7, 4, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)$): 24} edge from parent node [cond] {$>42.9$}}edge from parent node [cond] {$>0$}}
+demais ($\leq 2$): 24} edge from parent node [cond] {$>42.9$}}edge from parent node [cond] {$>0$}}
 ;
