--- a/plotPares.tex
+++ b/plotPares.tex
@@ -7,102 +7,102 @@
 \begin{axis}[xlabel=consultas, ylabel=colocação, legend style={at={(0.95,0.5)}, anchor=west}, grid = both,
 scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/fixed}]
 
-\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar-RFw ] {kappaallmediaParesRank.plot};\addlegendentry{Mar-RFw}
-\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent-RFw ] {kappaallmediaParesRank.plot};\addlegendentry{EERent-RFw}
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah-5NN ] {kappaallmediaParesRank.plot};\addlegendentry{TUmah-5NN}
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-5NN ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-RFw ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-NB ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-SVM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-C4.5w ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-CIELM ] {kappaallmediaParesRank.plot};
-\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-CIELM ] {kappaallmediaParesRank.plot};
+\addplot+[solid, blue, mark=*,   mark phase=143, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=Mar-RFw ] {kappaallmediaParesRank.tex};\addlegendentry{Mar-RFw}
+\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[solid, green!30!black, mark=square*,   mark phase=62, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=EERent-RFw ] {kappaallmediaParesRank.tex};\addlegendentry{EERent-RFw}
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[solid, gray, mark=square,   mark phase=95, mark options={solid, scale=1.4}, mark repeat=200] table[x=budget, y=TUmah-5NN ] {kappaallmediaParesRank.tex};\addlegendentry{TUmah-5NN}
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-5NN ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-RFw ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-NB ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-SVM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-C4.5w ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUmah-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUmah-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUmah-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUman-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUman-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=ATUeuc-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=HTUeuc-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SGmulti-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUman-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=TUeuc-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Clu-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Rnd-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=Mar-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=EERent-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=SVMbal-CIELM ] {kappaallmediaParesRank.tex};
+\addplot+[dotted, gray, no marks] table[x=budget, y=QBCRFw-CIELM ] {kappaallmediaParesRank.tex};
 
 \end{axis}
 \end{tikzpicture}
